# InputMaker

./: README.md
InputMaker/: .gitignore  CMakeLists.txt  InputMaker.cpp
InputMaker/Header/: GlobalDefines.h  GlobalEnums.h
InputMaker/Header/Interactions/: MyGesture.h
InputMaker/Header/Managers/: ApplicationManager.h  RenderManager.h  ResolutionManager.h  WindowManager.h
InputMaker/Header/Utils/: MathUtils.h  MyRectangle.h  MyTexture2D.h  MyVector2.h  TextureUtils.h  WindowsUtils.h
InputMaker/Header/VisualElements/: Drawable.h  IDrawable.h  UIText.h  UITexture.h
InputMaker/res/: resources.rc
InputMaker/src/Interactions/: MyGesture.cpp
InputMaker/src/Managers/: ApplicationManager.cpp  RenderManager.cpp  ResolutionManager.cpp  WindowManager.cpp
InputMaker/src/Utils/: MathUtils.cpp  MyRectangle.cpp  MyTexture2D.cpp  MyVector2.cpp  TextureUtils.cpp  WindowsUtils.cpp
InputMaker/src/VisualElements/: Drawable.cpp  UIText.cpp  UITexture.cpp
